# quant-risk-metrics

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
notebooks/: exploration.ipynb
src/quant_risk_metrics/: config.py  logging_utils.py  main.py
src/quant_risk_metrics/core/: processor.py  var_engine.py
src/quant_risk_metrics/data/: loader.py
src/quant_risk_metrics/utils/: helpers.py
tests/: test_var_engine.py
